[package]
name = "ecs_wasm_game"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A multiplayer game using ECS architecture with Rust and WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "MouseEvent",
    "Window",
    "Document",
    "Element",
    "DomRect",
    "WebSocket",
    "MessageEvent",
    "BinaryType"
] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3" 